Creates TellUsMore page and finishes working Home page

--- a/host-web-app/src/custom.scss
+++ b/host-web-app/src/custom.scss
@@ -7,6 +7,7 @@
 /* make the customizations */
 $theme-colors: (
     "primary": #485B55,
+    "light": #DDDDDD,
 );
 
 $custom-control-indicator-active-bg:#485B55;
