--- a/www/styles/index.css
+++ b/www/styles/index.css
@@ -16,6 +16,10 @@ body{
   @apply px-4 py-2 text-green rounded;
 }
 
+.btn-green-spec-sm {
+  @apply bg-green hover:bg-white hover:text-green text-sm border border-green text-white font-bold py-2 px-6 lg:px-10 duration-200 transition-colors mb-6 lg:mb-0 rounded-full;
+}
+
 .btn-green-spec {
   @apply bg-green hover:bg-white hover:text-green border border-green text-white font-bold py-4 px-6 lg:px-8 duration-200 transition-colors mb-6 lg:mb-0 rounded-xl;
 }
